--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -13,13 +13,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ela Admin - HTML5 Admin Template</title>
-    <meta name="description" content="Ela Admin - HTML5 Admin Template">
+    <title>Sistema de Abogados</title>
+    <meta name="description" content="Sistema de Abogados El Salvador">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <environment include="Development">
-        <link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
-        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">
+        @*<link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
+        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
@@ -33,8 +33,8 @@
     </environment>
 
     <environment exclude="Development">
-        <link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
-        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">
+        @*<link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
+        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
@@ -59,17 +59,26 @@
                 <div class="login-form">
                     <form asp-action="Login" id="LoginForm">
                         @Html.AntiForgeryToken()
+                        @if (ViewData["msjLogin"] != null) {
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>@ViewData["msjLogin"].ToString()</strong> favor verificar la información ingresada.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        }
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
-                            <label>Email address</label>
+                            <label asp-for="Usuario" class="form-control-label"></label>
                             <input asp-for="Usuario" type="email" class="form-control" placeholder="Email" />
                             <span asp-validation-for="Usuario" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
+                            <label asp-for="Password" class="form-control-label"></label>
                             <input asp-for="Password" type="password" class="form-control" placeholder="Password">
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
+
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox"> Recordar
@@ -86,8 +95,8 @@
                             </div>
                         </div>
                         @*<div class="register-link m-t-15 text-center">
-                            <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
-                        </div>*@
+            <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
+        </div>*@
                     </form>
                 </div>
             </div>
@@ -126,6 +135,13 @@
 
 
     </environment>
-
+    <script>
+        jQuery(document).ready(function () {
+            // show the alert
+            setTimeout(function () {
+                jQuery(".alert").alert('close');
+            }, 6000);
+        });
+    </script>
 </body>
 </html>
