Se guardan los datos

--- a/PreOrclFrontEnd/Views/Home/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Home/Index.cshtml
@@ -133,7 +133,7 @@
         <!--  /Traffic -->
         <div class="clearfix"></div>
         <!-- Orders -->
-        <div class="orders">
+        @*<div class="orders">
             <div class="row">
                 <div class="col-xl-8">
                     <div class="card">
@@ -262,7 +262,7 @@
                     </div>
                 </div> <!-- /.col-md-4 -->
             </div>
-        </div>
+        </div>*@
         <!-- /.orders -->
         <!-- To Do and Live Chat -->
         <div class="row">
@@ -277,7 +277,7 @@
                                         <ul>
                                             <li>
                                                 <label>
-                                                    <input type="checkbox"><i class="check-box"></i><span>Conveniently fabricate interactive technology for ....</span>
+                                                    <input type="checkbox"><i class="check-box"></i><span>Juzgado de Paz ....</span>
                                                     <a href='#' class="fa fa-times"></a>
                                                     <a href='#' class="fa fa-pencil"></a>
                                                     <a href='#' class="fa fa-check"></a>
@@ -285,7 +285,7 @@
                                             </li>
                                             <li>
                                                 <label>
-                                                    <input type="checkbox"><i class="check-box"></i><span>Creating component page</span>
+                                                    <input type="checkbox"><i class="check-box"></i><span>Documentación Legal</span>
                                                     <a href='#' class="fa fa-times"></a>
                                                     <a href='#' class="fa fa-pencil"></a>
                                                     <a href='#' class="fa fa-check"></a>
@@ -293,7 +293,7 @@
                                             </li>
                                             <li>
                                                 <label>
-                                                    <input type="checkbox" checked><i class="check-box"></i><span>Follow back those who follow you</span>
+                                                    <input type="checkbox" checked><i class="check-box"></i><span>Reunión de Abogados</span>
                                                     <a href='#' class="fa fa-times"></a>
                                                     <a href='#' class="fa fa-pencil"></a>
                                                     <a href='#' class="fa fa-check"></a>
@@ -301,7 +301,7 @@
                                             </li>
                                             <li>
                                                 <label>
-                                                    <input type="checkbox" checked><i class="check-box"></i><span>Design One page theme</span>
+                                                    <input type="checkbox" checked><i class="check-box"></i><span>Buffet Meeting</span>
                                                     <a href='#' class="fa fa-times"></a>
                                                     <a href='#' class="fa fa-pencil"></a>
                                                     <a href='#' class="fa fa-check"></a>
@@ -310,7 +310,7 @@
 
                                             <li>
                                                 <label>
-                                                    <input type="checkbox" checked><i class="check-box"></i><span>Creating component page</span>
+                                                    <input type="checkbox" checked><i class="check-box"></i><span>Jornada legal</span>
                                                     <a href='#' class="fa fa-times"></a>
                                                     <a href='#' class="fa fa-pencil"></a>
                                                     <a href='#' class="fa fa-check"></a>
@@ -337,62 +337,79 @@
             </div>
 
             @*<div class="col-lg-6">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title box-title">Live Chat</h4>
-                    <div class="card-content">
-                        <div class="messenger-box">
-                            <ul>
-                                <li>
-                                    <div class="msg-received msg-container">
-                                        <div class="avatar">
-                                            <img src="images/avatar/64-1.jpg" alt="">
-                                            <div class="send-time">11.11 am</div>
-                                        </div>
-                                        <div class="msg-box">
-                                            <div class="inner-box">
-                                                <div class="name">
-                                                    John Doe
-                                                </div>
-                                                <div class="meg">
-                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sunt placeat velit ad reiciendis ipsam
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title box-title">Live Chat</h4>
+                        <div class="card-content">
+                            <div class="messenger-box">
+                                <ul>
+                                    <li>
+                                        <div class="msg-received msg-container">
+                                            <div class="avatar">
+                                                <img src="images/avatar/64-1.jpg" alt="">
+                                                <div class="send-time">11.11 am</div>
+                                            </div>
+                                            <div class="msg-box">
+                                                <div class="inner-box">
+                                                    <div class="name">
+                                                        John Doe
+                                                    </div>
+                                                    <div class="meg">
+                                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sunt placeat velit ad reiciendis ipsam
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div><!-- /.msg-received -->
-                                </li>
-                                <li>
-                                    <div class="msg-sent msg-container">
-                                        <div class="avatar">
-                                            <img src="images/avatar/64-2.jpg" alt="">
-                                            <div class="send-time">11.11 am</div>
-                                        </div>
-                                        <div class="msg-box">
-                                            <div class="inner-box">
-                                                <div class="name">
-                                                    John Doe
-                                                </div>
-                                                <div class="meg">
-                                                    Hay how are you doing?
+                                        </div><!-- /.msg-received -->
+                                    </li>
+                                    <li>
+                                        <div class="msg-sent msg-container">
+                                            <div class="avatar">
+                                                <img src="images/avatar/64-2.jpg" alt="">
+                                                <div class="send-time">11.11 am</div>
+                                            </div>
+                                            <div class="msg-box">
+                                                <div class="inner-box">
+                                                    <div class="name">
+                                                        John Doe
+                                                    </div>
+                                                    <div class="meg">
+                                                        Hay how are you doing?
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div><!-- /.msg-sent -->
-                                </li>
-                            </ul>
-                            <div class="send-mgs">
-                                <div class="yourmsg">
-                                    <input class="form-control" type="text">
+                                        </div><!-- /.msg-sent -->
+                                    </li>
+                                </ul>
+                                <div class="send-mgs">
+                                    <div class="yourmsg">
+                                        <input class="form-control" type="text">
+                                    </div>
+                                    <button class="btn msg-send-btn">
+                                        <i class="pe-7s-paper-plane"></i>
+                                    </button>
                                 </div>
-                                <button class="btn msg-send-btn">
-                                    <i class="pe-7s-paper-plane"></i>
-                                </button>
+                            </div><!-- /.messenger-box -->
+                        </div>
+                    </div> <!-- /.card-body -->
+                </div><!-- /.card -->
+            </div>*@
+        </div>
+
+        <div class="row">
+
+            <div class="col-xl-10">
+                <div class="row">
+                    <div class="col-lg-12 col-xl-12">
+                        <div class="card br-0">
+                            <div class="card-body">
+                                <div class="chart-container ov-h">
+                                    <div id="flotPie1" class="float-chart"></div>
+                                </div>
                             </div>
-                        </div><!-- /.messenger-box -->
+                        </div><!-- /.card -->
                     </div>
-                </div> <!-- /.card-body -->
-            </div><!-- /.card -->
-        </div>*@
+                </div>
+            </div>
         </div>
         <!-- /To Do and Live Chat -->
         <!-- Calender Chart Weather  -->
@@ -483,8 +500,8 @@
             </div>
         </div>*@
         <!-- /#add-category -->
-        </div>
     </div>
+        </div>
         @section Scripts{
             <script>
                 jQuery(document).ready(function ($) {
