--- a/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
@@ -88,7 +88,14 @@
 
             <div class="user-area dropdown float-right">
                 <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="user-avatar rounded-circle" src="~/images/man64.png" alt="User Avatar">
+                    @if (ViewData["Picture"] == null)
+                    {
+                        <img class="user-avatar rounded-circle" src="~/images/man64.png" alt="User Avatar">
+                    }
+                    else
+                    {
+                        <img class="user-avatar rounded-circle" src="@ViewData["Picture"]" alt="User Avatar">
+                    }
                 </a>
 
                 <div class="user-menu dropdown-menu">
