Mejoras en avatar

--- a/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
@@ -88,7 +88,7 @@
 
             <div class="user-area dropdown float-right">
                 <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @if (ViewData["Picture"] == null)
+                    @if (ViewData["Email"] == null)
                     {
                         <img class="user-avatar rounded-circle" src="~/images/man64.png" alt="User Avatar">
                     }
