--- a/PreOrclFrontEnd/Views/_ViewImports.cshtml
+++ b/PreOrclFrontEnd/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PreOrclFrontEnd
 @using PreOrclFrontEnd.Models
+@using PreOrclFrontEnd.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
