--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -90,7 +90,7 @@
                         <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
                         <div class="social-login-content">
                             <div class="social-button">
-                                <a class="btn btn-default" asp-controller="Account" asp-action="SignIn">Iniciar sesión con cuenta de Microsoft</a>
+                                <a class="btn btn-default" asp-controller="Auth" asp-action="Micro">Iniciar sesión con cuenta de Microsoft</a>
                                 <a class="btn btn-default" asp-action="#">Iniciar sesión con cuenta de Google</a>
                             </div>
                         </div>
