Roles del sistema

--- a/PreOrclFrontEnd/Views/Roles/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Roles/Index.cshtml
@@ -47,7 +47,7 @@
                     <div class="card-body">
                         <div class="row form-group">
                             <div class="col-sm-12">
-                                <a asp-action="Create" title="Agregar Rol" class="btn btn-primary">Agregar Rol</a>
+                                <a href="#" data-toggle="modal" data-target="#largeModal" onclick="modalShow({'NameModalPartial':'#largeModalPartial','Url':'@Url.Action("DetailsPartial","SisPerPersonas")','Id':41.0})" class="btn btn-primary" title="Agregar Rol">Agregar Rol</a>
                             </div>
                         </div>
                         <div class="row">
@@ -84,11 +84,11 @@
                                                                     <a asp-action="Edit" asp-route-id="@item.IdRol" title="Editar"><i class="fa fa-edit" style="color:forestgreen"></i></a>
                                                                 </div>
                                                                 <div class="col-sm-3">
-                                                                    <a href="#" data-toggle="modal" data-target="#largeModal" onclick="LargeModalDetailOnclick(@item.IdRol)" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>
+                                                                    @*<a href="#" data-toggle="modal" data-target="#largeModal" onclick="LargeModalDetailOnclick(@item.IdRol)" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>*@
 
                                                                 </div>
                                                                 <div class="col-sm-3">
-                                                                    <a asp-action="Delete" asp-route-id="@item.IdRol" title="Eliminar Registro"><i class="fa fa-eraser" style="color:red"></i></a>
+                                                                    <a asp-action="Delete" asp-route-id="@item.IdRol" title="Inactivar"><i class="fa fa-eraser" style="color:red"></i></a>
                                                                 </div>
                                                             </div>
                                                         </td>
@@ -121,41 +121,7 @@
     <script src="~/templateAdmin/assets/js/lib/data-table/buttons.print.min.js"></script>
     <script src="~/templateAdmin/assets/js/lib/data-table/buttons.colVis.min.js"></script>
     <script src="~/templateAdmin/assets/js/init/datatables-init.js"></script>
-
-    <script type="text/javascript">
-                $(document).ready(function () {
-                    $('#bootstrap-data-table2').DataTable({
-                        "language": {
-                            "lengthMenu": "Mostrando _MENU_ registros por página",
-                            "zeroRecords": "Lo sentimos ningún registro encontrado",
-                            "info": "Mostrando _PAGE_ de _PAGES_",
-                            "infoEmpty": "No se encontraron registros",
-                            "infoFiltered": "(filtrado de _MAX_ registros)",
-                            "paginate": {
-                                "previous": "Anterior",
-                                "next":"Siguiente"
-                            },
-                            "search":"Buscar"
-                        }
-                    });
-                    $('#bootstrap-data-table-export').DataTable();
-                });
-
-        function LargeModalDetailOnclick(id) {
-            $('#largeModalPartial').html("");
-                    $.get('@Url.Action("DetailsPartial","SisPerPersonas")', { id: id })
-                        .done(function (html) {
-                           // alert(html);
-
-                            $('#largeModalPartial').html(html);
-
-                        });
-                }
-
-                function HideLarModalDetailOnclick(largeModal) {
-                    $(largeModal).hide();
-                }
-
-    </script>
+    <script src="~/js/dataTableLanguageESConfig.js"></script>
+    <script src="~/js/modalConfig.js"></script>
 
 }
