--- a/PreOrclFrontEnd/Views/Roles/_CreatePartial.cshtml
+++ b/PreOrclFrontEnd/Views/Roles/_CreatePartial.cshtml
@@ -1,7 +1,7 @@
-﻿@model PreOrclFrontEnd.Models.SisPerPersona
+﻿@model PreOrclFrontEnd.ViewModels.VwModelRolesPermisos
 
     <div class="modal-header">
-        <h5 class="modal-title" id="largeModalLabel">Detalle</h5>
+        <h5 class="modal-title" id="largeModalLabel">Crear Rol de Sistema</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -13,137 +13,29 @@
 
         <div class="card-body card-block">
             <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_nombre_razon" class="form-control-label"></label>
+                <div class="col-sm-12">
+                    <label asp-for="NombreRol" class="form-control-label"></label>
                     <div class="input-group">
                         <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                        <input asp-for="per_nombre_razon" class="form-control" disabled="disabled" />
+                        <input asp-for="NombreRol" class="form-control" />
                     </div>
-                    <span asp-validation-for="per_nombre_razon" class="text-danger"></span>
+                    <span asp-validation-for="NombreRol" class="text-danger"></span>
                 </div>
                 <div class="col-sm-6">
-                    <label asp-for="per_apellido_comercial" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-users"></i></div>
-                        <input asp-for="per_apellido_comercial" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_apellido_comercial" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_nit" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-check-square-o"></i></div>
-                        <input asp-for="per_nit" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_nit" class="text-danger"></span>
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="per_dui_nrc" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-info"></i></div>
-                        <input asp-for="per_dui_nrc" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_dui_nrc" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_direccion_departamento" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-sitemap"></i></div>
-                        <input asp-for="per_direccion_departamento" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_direccion_departamento" class="text-danger"></span>
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="per_direccion_municipio" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-puzzle-piece"></i></div>
-                        <input asp-for="per_direccion_municipio" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_direccion_municipio" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_direccion" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-envelope-o"></i></div>
-                        <input asp-for="per_direccion" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_direccion" class="text-danger"></span>
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="per_telefono" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-phone-square"></i></div>
-                        <input asp-for="per_telefono" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_telefono" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_movil" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-mobile"></i></div>
-                        <input asp-for="per_movil" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_movil" class="text-danger"></span>
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="per_email" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
-                        <input asp-for="per_email" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_email" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-6">
-                    <label asp-for="per_codigo" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-tag"></i></div>
-                        <input asp-for="per_codigo" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_codigo" class="text-danger"></span>
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="per_nacionalidad" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-flag"></i></div>
-                        <input asp-for="per_nacionalidad" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_nacionalidad" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sm-4">
-                    <label asp-for="per_tipo_contribullente" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa  fa-folder-o"></i></div>
-                        <input asp-for="per_tipo_contribullente" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_tipo_contribullente" class="text-danger"></span>
-                </div>
-                <div class="col-sm-4">
-                    <label asp-for="per_dir_cli" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-location-arrow"></i></div>
-                        <input asp-for="per_dir_cli" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_dir_cli" class="text-danger"></span>
-                </div>
-                <div class="col-sm-4">
-                    <label asp-for="per_cobros" class="form-control-label"></label>
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-level-up"></i></div>
-                        <input asp-for="per_cobros" class="form-control" disabled="disabled" />
-                    </div>
-                    <span asp-validation-for="per_cobros" class="text-danger"></span>
+                    @for (int i =0;i<Model.Permisos.Count;i++)
+                    {
+                        <label asp-for="Permisos[i].NombrePermiso" class="form-control-label"></label>
+                        <div class="input-group">
+                            <div class="input-group-addon"><i class="fa fa-users"></i></div>
+                            <input asp-for="Permisos[i].NombrePermiso" class="form-control" disabled="disabled" />
+                        </div>
+                    }
+                    @*<label asp-for="per_apellido_comercial" class="form-control-label"></label>
+        <div class="input-group">
+            <div class="input-group-addon"><i class="fa fa-users"></i></div>
+            <input asp-for="per_apellido_comercial" class="form-control" disabled="disabled" />
+        </div>
+        <span asp-validation-for="per_apellido_comercial" class="text-danger"></span>*@
                 </div>
             </div>
         </div>
@@ -151,6 +43,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model.per_IDPER">Editar</a>
+        @*<a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model.per_IDPER">Editar</a>*@
     </div>
 
